# qualcomm___pytac

./: Makefile  README.md  client.py  debugboard.py  pyproject.toml  rest.py  shell.py
.github/workflows/: config-loading.yml  lint.yml
pytac/: __init__.py  cli.py  debugboard.py  installconfigs.py  service.py  shell.py
tac_configs/: TAC_FTDI_13.tcnf
tests/: README.md  conftest.py  test_config_loading.py  test_create_board.py  test_smoke.py
