# Copyright (c) 2026 Qualcomm Technologies, Inc. and/or its subsidiaries.
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pytac"
version = "1.4.0"
description = "Python Test Automation Controller (TAC/Alpaca) for Qualcomm debug boards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
    "Flask",
    "Flask-RESTful",
    "pyftdi",
    "pyusb",
    "pexpect",
    "pyserial",
    "pyudev",
    "requests",
    "hid",
]

[project.optional-dependencies]
dev = ["ruff==0.15.17"]

[project.scripts]
pytac = "pytac.cli:main"

[project.urls]
Homepage = "https://github.com/qualcomm/pytac"

[tool.setuptools]
packages = ["pytac"]

[tool.setuptools.package-data]
pytac = ["tac_configs/*"]

# Ruff configuration (replaces black, isort and pylint)
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",    # line length is handled by the formatter
    "B904",    # raise-without-from inside except (matches old pylint W0707)
    "SIM115",  # open without a context manager (matches old pylint R1732)
]
